# grapher-3d

./: .gitignore  Dockerfile  README.md  build_js.sh  clean.sh  setup.sh
client/: .eslintignore  .firebaserc  .gitignore  README.md  config-overrides.js  package-lock.json  package.json  tsconfig.json
client/public/: index.html
client/src/: App.tsx  colors.scss  crate.ts  index.scss  index.tsx
client/src/components/graph/: CanvasGraph.tsx  GrapahSelect.tsx  GraphPage.scss  GraphPage.tsx  GraphSelect.scss  GraphSelect.tsx  GraphSidePanel.tsx
client/src/components/login/: AccountPage.scss  AccountPage.tsx
client/src/connection/: auth.ts  conn.ts  db.ts  firebase.ts
client/src/types/: graph.ts
client/src/utils/: hooks.tsx
lib/: .gitignore  Cargo.toml  Makefile
lib/src/: grapher.rs  lib.rs  tests.rs  utils.rs
lib/src/math/: geometry.rs  mat4.rs  mod.rs  vec3.rs
lib/src/parser/: lexer.rs  mod.rs  native.rs  native_func.rs  parser.rs
lib/src/render/: glutils.rs  grid.rs  mod.rs
lib/src/shaders/: mod.rs  shader_generator.rs
lib/src/shaders/src/: equation.frag  equation.vert  grid.frag  grid.vert
scripts/: utils.sh
server/: .gitignore  build.xml
server/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
server/nbproject/private/: config.properties  private.properties  private.xml
server/src/bishan/grapher3d/: MainServer.java
server/src/bishan/grapher3d/database/: SQLDb.java  SQLTableInfo.java  SetupDB.java
server/src/bishan/grapher3d/handlers/: APIHandler.java  FileHandler.java
(+5 files in other folders)
