[package]
name = "lib"
version = "0.1.0"
authors = ["ANONYMOUS FOR IB"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.79"
js-sys = "0.3.56"

console_error_panic_hook = { version = "0.1.7", optional = true }
wee_alloc = { version = "0.4.5", optional = true }

[dependencies.web-sys]
version = "0.3.56"
features = [
    'Document',
    'Element',
    'HtmlCanvasElement',
    'Window',
    'WebGl2RenderingContext',
    'WebGlProgram',
    'WebGlBuffer',
    'WebGlUniformLocation',
    'WebGlVertexArrayObject',
    'WebGlShader',
]

[dev-dependencies]
wasm-bindgen-test = "0.3.29"

[profile.release]
opt-level = "s"
